# rag-support-automation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/sample_docs/: device_manual.md  support_sop.md
scripts/: eval_retrieval.py  ingest.py
src/rag_support/: __init__.py  config.py
src/rag_support/api/: main.py  schemas.py
src/rag_support/embeddings/: embedder.py
src/rag_support/generation/: chain.py  prompts.py
src/rag_support/ingestion/: loader.py  splitter.py
src/rag_support/retrieval/: retriever.py
src/rag_support/vectorstore/: base.py  faiss_store.py  memory_store.py  pinecone_store.py
tests/: conftest.py  test_api.py  test_chain.py  test_retrieval.py  test_splitter.py
