[project]
name = "rag-support-automation"
version = "1.0.0"
description = "Intelligent Technical Knowledge & Support Automation Platform (RAG)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
